--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <title>Counting Site</title>
 </head>
 <body>
-        <section id="counter">
+        <section class="counter">
             <div>
                 <h1 id="counter-display">0</h1>
             </div>
-            <div>
+            <div id="counter-control">
                 <button id="counterAdd">+</button>
                 <button id="counterSubs">-</button>
             </div>
-        </section>
+        </section>]
+        <script src="script.js"></script>
 </body>
 </html>
