--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <button id="counterAdd">+</button>
                 <button id="counterSubs">-</button>
             </div>
-        </section>]
+        </section>
         <script src="script.js"></script>
 </body>
 </html>
